# UR-Connect-Android

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/de/ur/connect/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/ur/connect/: Backend.kt  Credentials.kt  DateHelper.kt  LoginPage.kt  MainActivity.kt  Storage.kt  TimeTablePage.kt
app/src/main/java/de/ur/connect/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/de/ur/connect/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
ur-connect-jni/: Cargo.toml  README.md  compile.sh
ur-connect-jni/src/: lib.rs
